@@ -1,0 +1,35 @@
+#include "../stdafx.h"
+#include "SmartPlaylistDirectory.h"
+#include "../utils/log.h"
+#include "../SmartPlaylist.h"
+#include "../MusicDatabase.h"
+
+namespace DIRECTORY
+{
+  CSmartPlaylistDirectory::CSmartPlaylistDirectory()
+  {
+  }
+
+  CSmartPlaylistDirectory::~CSmartPlaylistDirectory()
+  {
+  }
+
+  bool CSmartPlaylistDirectory::GetDirectory(const CStdString& strPath, CFileItemList& items)
+  {
+    // Load in the SmartPlaylist and get the WHERE query
+    CSmartPlaylist playlist;
+    if (!playlist.Load(strPath))
+      return false;
+    CMusicDatabase db;
+    db.Open();
+    bool success = db.GetSongsByWhere(playlist.GetWhereClause(), items);
+    db.Close();
+    return success;
+  }
+
+  bool CSmartPlaylistDirectory::ContainsFiles(const CStdString& strPath)
+  {
+    // smart playlists always have files??
+    return true;
+  }
+}
